@startuml AppHerencia

skinparam ClassAttributeIconSize 0
hide circle

class App {
    - Canvas miVentana
    - ArrayList<???> 
    + ejecutar ()
    + CrearFigurasGeometricas()
    + CrearFigurasAleatorias(int)
    + GraficarCirculosColeccionados ()
    + BorrarCirculosColeccionados ()
    + GraficarRectangulosColeccionados ()
    + BorrarRectangulosColeccionados ()
    + RebotePelota ()
    + ReboteRectangulo ()
}

class Posicion {
    - int x
    - int y
    - int despX
    - int despY
    + Posicion(int x, int y)
    + int getX ()
    + int getY ()
    + nuevaPosicion ()
}

class FiguraGeometrica {
    - Color color
    - Posicion pos
    - String nombre
    + actualizarPosicion ()
}

class Circulo {
    - MAX_RADIO = 1000
    - int radio
    + Circulo (double radio)
    + getPerimetro () : double
    + getSuperficie () : double
    + determinarColor ()
}

class Rectangulo {
    - MAX_LADO = 1000
    - int lado1
    - int lado2
    + Rectangulo (double l1, double l2)
    + double getPerimetro ()
    + double getSuperficie ()
    + determinarColor ()
}

App -> FiguraGeometrica
App -left-> Canvas

FiguraGeometrica <|-- Circulo
FiguraGeometrica <|-- Rectangulo
FiguraGeometrica <|-- Triangulo

FiguraGeometrica -> Posicion
FiguraGeometrica -up-> Color

note top of Posicion
    El método <i>actualizarPosicion()</i>
    de la clase <b>FiguraGeometrica</b>
    llama a <i>nuevaPosicion()<i>. 
end note

@enduml